--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -16,9 +16,42 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Responsive Portfolio</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Boop</h1>
+    <nav class="navbar navbar-dark bg-dark">
+      <!-- Navbar content -->
+      <class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Wellcome to my portfolio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a
+              class="nav-item nav-link disabled"
+              href="#"
+              tabindex="-1"
+              aria-disabled="true"
+              >Disabled</a
+            >
+          </div>
+        </div>
+      </nav>
+    </nav>
   </body>
 </html>
