--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <!-- Bootstrap CSS -->
     <link
@@ -23,7 +24,7 @@
     <nav class="navbar navbar-dark bg-dark">
       <!-- Navbar content -->
       <class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Wellcome to my portfolio</a>
+        <a class="navbar-brand" href="#">About Me</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,8 +41,8 @@
             <a class="nav-item nav-link active" href="#"
               >Home <span class="sr-only">(current)</span></a
             >
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link" href="#">Portfolio</a>
             <a
               class="nav-item nav-link disabled"
               href="#"
@@ -53,5 +54,21 @@
         </div>
       </nav>
     </nav>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+   
+
   </body>
 </html>
