--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Responsive Portfolio</title>
   </head>
   <body>
-    <h1>Boop</h1>
+    <h1>Snickers the Dog helping other dogs find their forever homes</h1>
     <nav class="navbar navbar-dark bg-dark">
       <!-- Navbar content -->
       <class="navbar navbar-expand-lg navbar-light bg-light">
@@ -55,20 +55,33 @@
       </nav>
     </nav>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div id="carouseldogs" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="photos/couch-unsplash.jpg" class="d-block w-100" alt="pub on a couch">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="photos/grey-unsplash.jpg" class="d-block w-100" alt="a beautiful greyhoud">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="photos/runninghounds-unsplash.jpg" class="d-block w-100" alt="two dogs running on a beach">
         </div>
       </div>
     </div>
+
+    
    
+      <p>Thank you for coming to my portfolio Website. A little bit about me, well as you can see from my photos I'm a greyhound. I was recsued by an awesome human 4 years ago and let me tell you this life of hanging out on the couch 
+        and going for long walks is so much better than being a race dog. Oh did I forget to mention that I used to be a Race dog down in Oklahoma. Lucky for me I wasn't very fast and they retired me early thats when I met my human and went to my forever home. Since that day four years ago I have lived the life. It is my mission now to help other retired race dogs find forever homes. 
+      </p>
+
+      <div class="placeholder">
+        I'm in a placeholder 
+      </div>
+
+      <div class="anotherclass">
+        I'm in another place holder 
+      </div>
 
   </body>
 </html>
