--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Booping you</h1>
+
     <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
         <class="navbar navbar-expand-lg navbar-light bg-light">
