--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -25,6 +28,10 @@
       <!-- Navbar content -->
       <class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">About Me</a>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="Portfolio.html">Portfolio</a>
+
         <button
           class="navbar-toggler"
           type="button"
