--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    
+
 
     <!-- Bootstrap CSS -->
     <link
@@ -23,7 +23,7 @@
     <title>Responsive Portfolio</title>
   </head>
   <body>
-    <h1>Snickers the Dog helping other dogs find their forever homes</h1>
+    <h1>Snickers, The Greyhound, helping dogs find forever homes</h1>
     <nav class="navbar navbar-dark bg-dark">
       <!-- Navbar content -->
       <class="navbar navbar-expand-lg navbar-light bg-light">
@@ -78,8 +78,8 @@
 
     
    
-      <p>Thank you for coming to my portfolio Website. A little bit about me, well as you can see from my photos I'm a greyhound. I was recsued by an awesome human 4 years ago and let me tell you this life of hanging out on the couch 
-        and going for long walks is so much better than being a race dog. Oh did I forget to mention that I used to be a Race dog down in Oklahoma. Lucky for me I wasn't very fast and they retired me early thats when I met my human and went to my forever home. Since that day four years ago I have lived the life. It is my mission now to help other retired race dogs find forever homes. 
+      <p>Thank you for coming to my Website. A little bit about me, well as you can see from my photos I'm a greyhound. I was recsued by an awesome human 4 years ago and let me tell you this life of hanging out on the couch 
+        and going for long walks is so much better than my old life. Oh I almost forgot to mention that I used to be a Race dog down in Oklahoma. Lucky for me I wasn't very fast and they retired me early.  Thats when I met my human at a greyhound rescue in philadelphia called NGAP and went to my forever home. Since that day four years ago I have lived the life. It is my mission now to help other retired race dogs find forever homes. 
       </p>
 
       <div class="placeholder">
