--- a/portfolio.html
+++ b/portfolio.html
@@ -20,11 +20,11 @@
     <title>Saving all the doggos!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Snickers, The Greyhound!</h1>
     <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
         <class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">Wellcome to my portfolio</a>
+          <a class="navbar-brand" href="#">Welcome to my portfolio...I boop you with my nose</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -54,5 +54,11 @@
           </div>
         </nav>
       </nav>
+      <div class="alert alert-dark" role="alert">
+        Meet some friends that I have helped find forever homes 
+      </div>
+
+      <img src="photos/runninghounds-unsplash.jpg" alt="dogs running on a beach" height="50%x" width="50%">
+      <img src="photos/grey-unsplash.jpg" alt="a greyhound" height="50%" width="50%">
   </body>
 </html>
