--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>Hello, world!</title>
+    <title>The pup page</title>
   </head>
   <body>
-    <h1>Booping you</h1>
+    <h1>Snickers, The Greyhound...Booping you</h1>
 
     <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
