--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,11 @@
         <!-- Navbar content -->
         <class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="#">Welcome to my portfolio...I boop you with my nose</a>
+          <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="Portfolio.html">Portfolio</a>
+        <a href="https://www.ngap.org/index.html">NGAP</a>
+        
           <button
             class="navbar-toggler"
             type="button"
