--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     <h1>Snickers, The Greyhound, helping dogs find forever homes</h1>
     <nav class="navbar navbar-dark bg-dark">
       <!-- Navbar content -->
-      <class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">About Me</a>
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
-        <a href="Portfolio.html">Portfolio</a>
+      <a class="navbar-brand" href="#">Home</a>
+      <a href="index.html">Home</a>
+      <a href="contact.html">Contact</a>
+      <a href="portfolio.html">Portfolio</a>
 
         <button
           class="navbar-toggler"
@@ -82,12 +81,12 @@
         and going for long walks is so much better than my old life. Oh I almost forgot to mention that I used to be a Race dog down in Oklahoma. Lucky for me I wasn't very fast and they retired me early.  Thats when I met my human at a greyhound rescue in philadelphia called NGAP and went to my forever home. Since that day four years ago I have lived the life. It is my mission now to help other retired race dogs find forever homes. 
       </p>
 
-      <div class="placeholder">
-        I'm in a placeholder 
+      <div class="alert alert-dark" role="alert">
+        Please consider donating to your local dog shelter 
       </div>
 
-      <div class="anotherclass">
-        I'm in another place holder 
+      <div class="alert alert-dark" role="alert">
+        Even the smallest donation can help! 
       </div>
 
   </body>
