--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,11 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
-        <class="navbar navbar-expand-lg navbar-light bg-light">
+        
           <a class="navbar-brand" href="#">Contact</a>
+          <a href="index.html">Home</a>
+          <a href="contact.html">Contact</a>
+          <a href="portfolio.html">Portfolio</a>
           <button
             class="navbar-toggler"
             type="button"
