hooman's contact info

--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,10 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+
+      <div class="alert alert-dark" role="alert">
+        Hey guys my human Rita Ziemann will be responding to all my messages you can learn more about her here <a href="https://www.linkedin.com/in/rita-ziemann-ms-bsn-rn-05492288/detail/contact-info/" class="hoooman">hooman's stuff</a>. Give it a click if you like.
+      </div>
       
   </body>
 </html>
