--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,15 @@
       <div class="alert alert-dark" role="alert">
         Meet some friends that I have helped find forever homes 
       </div>
+      <div class=dogphotos>
 
-      <img src="photos/runninghounds-unsplash.jpg" alt="dogs running on a beach" height="50%x" width="50%">
-      <img src="photos/grey-unsplash.jpg" alt="a greyhound" height="50%" width="50%">
-  </body>
+      <img src="photos/doggoandhooman.jpg" alt="dog and her human" width="75%" height="75%">
+      <img src="photos/greylights.jpg" alt="dog wrapped in lights" width="75%" height="75%">
+      <img src="photos/sadeyes.jpg" alt="dog with sad eyes" width="75%" height="75%" >
+      <img src="photos/sleepydog.jpg" alt="sleepy dog" width="75%" height="75%">
+      <img src="photos/walking.jpg" alt="walking dog" width="75%" height="75%">
+
+      
+    </div>
+    </body>
 </html>
