--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -24,70 +26,60 @@
   </head>
   <body>
     <h1>Snickers, The Greyhound, helping dogs find forever homes</h1>
+
+    <!-- Navbar content -->
+
     <nav class="navbar navbar-dark bg-dark">
-      <!-- Navbar content -->
       <a class="navbar-brand" href="#">Home</a>
       <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
       <a href="portfolio.html">Portfolio</a>
-
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-            <a class="nav-item nav-link" href="#">Contact</a>
-            <a class="nav-item nav-link" href="#">Portfolio</a>
-            <a
-              class="nav-item nav-link disabled"
-              href="#"
-              tabindex="-1"
-              aria-disabled="true"
-              >Disabled</a
-            >
-          </div>
-        </div>
-      </nav>
     </nav>
 
     <div id="carouseldogs" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="photos/couch-unsplash.jpg" class="d-block w-100" alt="pub on a couch">
+          <img
+            src="photos/couch-unsplash.jpg"
+            class="d-block w-100"
+            alt="pub on a couch"
+          />
         </div>
         <div class="carousel-item">
-          <img src="photos/grey-unsplash.jpg" class="d-block w-100" alt="a beautiful greyhoud">
+          <img
+            src="photos/grey-unsplash.jpg"
+            class="d-block w-100"
+            alt="a beautiful greyhoud"
+          />
         </div>
         <div class="carousel-item">
-          <img src="photos/runninghounds-unsplash.jpg" class="d-block w-100" alt="two dogs running on a beach">
+          <img
+            src="photos/runninghounds-unsplash.jpg"
+            class="d-block w-100"
+            alt="two dogs running on a beach"
+          />
         </div>
       </div>
     </div>
 
-    
-   
-      <p>Thank you for coming to my Website. A little bit about me, well as you can see from my photos I'm a greyhound. I was recsued by an awesome human 4 years ago and let me tell you this life of hanging out on the couch 
-        and going for long walks is so much better than my old life. Oh I almost forgot to mention that I used to be a Race dog down in Oklahoma. Lucky for me I wasn't very fast and they retired me early.  Thats when I met my human at a greyhound rescue in philadelphia called NGAP and went to my forever home. Since that day four years ago I have lived the life. It is my mission now to help other retired race dogs find forever homes. 
-      </p>
+    <p>
+      Thank you for coming to my Website. A little bit about me, well as you can
+      see from my photo I'm a greyhound. I was recsued by an awesome human 4
+      years ago and let me tell you this life of hanging out on the couch and
+      going for long walks is so much better than my old life. Oh I almost
+      forgot to mention that I used to be a Race dog down in Oklahoma. Lucky for
+      me I wasn't very fast and they retired me early. Thats when I met my human
+      at a greyhound rescue in philadelphia called NGAP and went to my forever
+      home. Since that day four years ago I have lived the life. It is my
+      mission now to help other retired race dogs find forever homes.
+    </p>
 
-      <div class="alert alert-dark" role="alert">
-        Please consider donating to your local dog shelter 
-      </div>
+    <div class="alert alert-dark" role="alert">
+      Please consider donating to your local dog shelter
+    </div>
 
-      <div class="alert alert-dark" role="alert">
-        Even the smallest donation can help! 
-      </div>
-
+    <div class="alert alert-dark" role="alert">
+      Even the smallest donation can help!
+    </div>
   </body>
 </html>
