--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,14 @@
   </head>
   <body>
     <h1>Snickers, The Greyhound!</h1>
+    
     <nav class="navbar navbar-dark bg-dark">
-        <!-- Navbar content -->
-        <class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">Portfolio</a>
-          <a href="index.html">Home</a>
-          <a href="contact.html">Contact</a>
-          <a href="portfolio.html">Portfolio</a>
+      <!-- Navbar content -->
+      <a class="navbar-brand" href="#">Home</a>
+      <a href="index.html">Home</a>
+      <a href="contact.html">Contact</a>
+      <a href="portfolio.html">Portfolio</a>
+
         <a href="https://www.ngap.org/index.html">NGAP</a>
 
           <button
@@ -62,6 +63,7 @@
       <div class="alert alert-dark" role="alert">
         Meet some friends that I have helped find forever homes 
       </div>
+
       <div class=dogphotos>
 
       <img src="photos/doggoandhooman.jpg" alt="dog and her human" width="75%" height="75%">
