--- a/index.html
+++ b/index.html
@@ -75,11 +75,14 @@
     </p>
 
     <div class="alert alert-dark" role="alert">
-      Please consider donating to your local dog shelter
+      Please consider donating or volunteering your time at a local dog shelter
+      such as
+      <a href="https://barcs.org/" target="_blank"> Barcs of Baltimore</a>
     </div>
 
     <div class="alert alert-dark" role="alert">
-      Even the smallest donation can help!
+      If your interested in adopting a Greyhound like me
+      <a href="https://www.ngap.org/index.html"> try NGAP</a>
     </div>
   </body>
 </html>
