--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
       me I wasn't very fast and they retired me early. Thats when I met my human
       at a greyhound rescue in philadelphia called NGAP and went to my forever
       home. Since that day four years ago I have lived the life. It is my
-      mission now to help other retired race dogs find forever homes.
+      mission now to help other retired race dogs find forever homes. While also
+      helping their hooomans by answering any questions they have about what it
+      is like to live with a greyhound like me. Like did you know that we don't
+      know how to walk up stairs? So reach out, I want to hear from you.
     </p>
 
     <div class="alert alert-dark" role="alert">
