--- a/portfolio.html
+++ b/portfolio.html
@@ -42,11 +42,11 @@
       <div class="container">
         <div class="row row-cols-2">
           
-          <div class="col"> <img src="photos/greylights.jpg" alt="dog wrapped in lights" width="75%" height="75%"></div>
-          <div class="col"><img src="photos/sadeyes.jpg" alt="dog with sad eyes" width="75%" height="75%" ></div>
-          <div class="col"><img src="photos/sleepydog.jpg" alt="sleepy dog" width="75%" height="75%"></div>
-          <div class="col"><img src="photos/walking.jpg" alt="walking dog" width="75%" height="75%"></div>
-          <div class="col"><img src="photos/doggoandhooman.jpg" alt="dog and her human" width="75%" height="75%"></div>
+          <div class="col"> <img src="photos/greylights.jpg" alt="dog wrapped in lights" width="75%" height="75%" >This is Paul</div>
+          <div class="col"><img src="photos/sadeyes.jpg" alt="dog with sad eyes" width="75%" height="75%" >This is susan</div>
+          <div class="col"><img src="photos/sleepydog.jpg" alt="sleepy dog" width="75%" height="75%">This is Joe</div>
+          <div class="col"><img src="photos/walking.jpg" alt="walking dog" width="75%" height="75%">This is Tina</div>
+          <div class="col"><img src="photos/doggoandhooman.jpg" alt="dog and her human" width="75%" height="75%">This is Ryan and hooman</div>
         </div>
       </div>
 
