--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,11 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -24,7 +29,7 @@
     
     <nav class="navbar navbar-dark bg-dark">
       <!-- Navbar content -->
-      <a class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand" href="#">Portfolio</a>
       <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
       <a href="portfolio.html">Portfolio</a>
